--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="favicon-removebg-preview.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> 
             Grey Promos (Coming Soon)
         </title>
@@ -22,7 +23,7 @@
           <span>
               <img src="Grey%20logo-comingsoon2.png">
           </span>
-          <span style="font-weight: 400;">
+          <span style="font-weight: 400; font-size: 1rem; margin-top: 7rem;">
               Designed & Developed by <br> WebLynks
           </span>
         </h1>
